--- a/footer.html
+++ b/footer.html
@@ -26,7 +26,11 @@
         <div class="footer-bottom">
             <div class="row align-items-center justify-content-between justify-content-lg-start">
                 <div class="col-md-3 col-sm-4">
-                    <div class="foot-logo mx-auto mx-sm-0"><img src="image/logo.png" class="w-100" alt=""></div>
+                    <div class="foot-logo mx-auto mx-sm-0">
+                        <a href="index.html">
+                            <img src="image/logo.png" class="w-100" alt="">
+                        </a>
+                    </div>
                 </div>
                 <div class="col-md-6 col-sm-7">
                     <div class="foot-social mt-3 mt-sm-0">
