--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="container-xxl">
         <div class="row justify-content-between align-items-center">
-            <div class="col-sm-3 my-3 text-start">
+            <div class="col-5 col-md-3 my-3 text-start">
                 <div class="nav-logo">
                     <a href="index.html"><img src="image/logo.png" alt="" class="w-100"></a>
                 </div>
