--- a/header.html
+++ b/header.html
@@ -19,14 +19,14 @@
                         <li class="nm-item" data-page="career-page"><a class="nm-link" href="careers.html">Careers</a>
                         </li>
                         <li class="nm-item">
-                            <a href="contact-us.html" class="th-btn d-inline-block d-lg-none">contact us</a>
+                            <a href="contact-us.html" data-page="contact-page" class="th-btn d-inline-block d-lg-none">contact us</a>
                         </li>
                         <div class="nm-circle"></div>
                     </ul>
                 </div>
             </div>
             <div class="col-3 my-3 d-flex justify-content-end">
-                <a href="contact-us.html" class="th-btn d-none d-lg-inline-block">contact us</a>
+                <a href="contact-us.html" data-page="contact-page" class="th-btn d-none d-lg-inline-block">contact us</a>
                 <div class="hamburger d-block d-lg-none" id="hamburger-6">
                     <span class="line"></span>
                     <span class="line"></span>
@@ -51,6 +51,8 @@
         $('.nav-menu-container').toggleClass("active");
     });
     var pageValue = $('body').attr('id');
-
+    if(pageValue == "contact-page"){
+        $('.nm-circle').addClass('d-none');
+    }
     $('[data-page="' + pageValue + '"]').addClass('active');
 </script>
