--- a/outreach-marketing-solution.html
+++ b/outreach-marketing-solution.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MediaX | Outreach & Marketing Solution</title>
+    <title>Outreach & Marketing Solution | MediaX - Creative Growth Agency</title>
     <!-- Website Icon  -->
     <link rel="Icon" href="image/">
 
@@ -46,13 +46,8 @@
             <div class="container-xxl">
                 <div class="row align-items-end justify-content-between">
                     <div class="col-md-6">
-                        <h2>OUTreach & marketing solution</h2>
-                        <p>We proudly showcase a curated collection of our most remarkable and successful endeavours.
-                            Each project represents our commitment to excellence.</p>
-                        <p>Your identity as a brand is your most powerful tool in building your reputation and
-                            credibility. Starting from the inside out, we meet with senior leaders and immerse ourselves
-                            in your organisation to develop a belief-led brand framework to guide your business forward.
-                        </p>
+                        <h2>Outreach & Marketing Solutions</h2>
+                        <p>In a world flooded with content, standing out isn't just a challenge – it's a necessity. That's where our media solutions come in. We don't just create content; we craft experiences that resonate with your audience on a deeper level. Whether it's influencer collaborations, strategic campaigns, or engaging social media content, we go beyond the surface to create meaningful connections and spark conversations. Because in the age of digital noise, authenticity is key – and we're here to help you find your voice.</p>
                     </div>
                     <div class="col-md-5">
                         <div class="ssh-box">
@@ -103,8 +98,8 @@
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
-                                    <h6>Social Media Marketing</h6>
-                                    <p>Lorem ipsum delor set amet fet lis del. Comos that prels wet kilpsae</p>
+                                    <h6>Influencer Marketing</h6>
+                                    <p>Strategically team up with popular personalities to promote your brand and connect with new customers.</p>
                                 </div>
                             </div>
                         </div>
@@ -112,8 +107,8 @@
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
-                                    <h6>Campaign Marketing</h6>
-                                    <p>Lorem ipsum delor set amet fet lis del. Comos that prels wet kilpsae</p>
+                                    <h6>Inter-Brand Collaborations </h6>
+                                    <p>Collaborate with other brands for powerful marketing campaigns that reach more people.</p>
                                 </div>
                             </div>
                         </div>
@@ -121,8 +116,8 @@
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
-                                    <h6>SEO Marketing</h6>
-                                    <p>Lorem ipsum delor set amet fet lis del. Comos that prels wet kilpsae</p>
+                                    <h6>WhatsApp Marketing</h6>
+                                    <p>Engage directly with customers through personalized messages and promotions on WhatsApp.</p>
                                 </div>
                             </div>
                         </div>
@@ -130,8 +125,89 @@
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
-                                    <h6>Print Marketing</h6>
-                                    <p>Lorem ipsum delor set amet fet lis del. Comos that prels wet kilpsae</p>
+                                    <h6>eMail Campaigns</h6>
+                                    <p>Targeted emails to attract leads, boost sales, and build lasting relationships with customers.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="whwedo-box">
+                                <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
+                                <div class="whwedo-text">
+                                    <h6>Regional Amplification</h6>
+                                    <p>Tailor your marketing to specific areas to make sure it resonates with the right people.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="whwedo-box">
+                                <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
+                                <div class="whwedo-text">
+                                    <h6>Social Media Management</h6>
+                                    <p>Curate and cultivate your brand's presence across social media platforms, fostering community engagement and brand advocacy.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="whwedo-box">
+                                <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
+                                <div class="whwedo-text">
+                                    <h6>Evergreen Strategy Development</h6>
+                                    <p>We create timeless and enduring marketing strategies that continue to drive results long after initial implementation.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="whwedo-box">
+                                <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
+                                <div class="whwedo-text">
+                                    <h6>Campaign Level Strategy Development</h6>
+                                    <p>We develop strategic frameworks for individual marketing campaigns, optimizing performance and maximizing impact.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="whwedo-box">
+                                <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
+                                <div class="whwedo-text">
+                                    <h6>Search Engine Optimization</h6>
+                                    <p>Improve your website's visibility and ranking on search engine results pages to attract organic traffic and increase online presence.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="whwedo-box">
+                                <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
+                                <div class="whwedo-text">
+                                    <h6>Online Reputation Management</h6>
+                                    <p>Protect and enhance your brand's online reputation through proactive monitoring, strategic engagement, and crisis management.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="whwedo-box">
+                                <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
+                                <div class="whwedo-text">
+                                    <h6>Press Releases</h6>
+                                    <p>Distribute newsworthy information and announcements to media outlets to generate publicity and raise awareness of your brand.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="whwedo-box">
+                                <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
+                                <div class="whwedo-text">
+                                    <h6>Editorial Articles</h6>
+                                    <p>Publish informative and engaging articles in relevant publications to establish thought leadership and enhance brand credibility.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="whwedo-box">
+                                <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
+                                <div class="whwedo-text">
+                                    <h6>Authored Articles</h6>
+                                    <p>Create compelling content authored by your brand's experts to showcase industry expertise and build trust with your audience.</p>
                                 </div>
                             </div>
                         </div>
