--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MediaX | Service</title>
+    <title>Service | MediaX - Creative Growth Agency</title>
     <!-- Website Icon  -->
     <link rel="Icon" href="image/">
 
@@ -68,12 +68,7 @@
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
-                                            <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
-                                                encompassing Influencer Marketing, Inter-Brand Collaborations, WhatsApp
-                                                & eMail Campaigns, Social Media Management, Evergreen Strategy
-                                                Development, and SEO. Amplify regional reach, shape online narratives,
-                                                and drive impactful results through our comprehensive suite of services
-                                                tailored for your success.</p>
+                                            <p>In a world flooded with content, our marketing solutions cut through the noise to create genuine connections. From influencer collaborations to social media management, we go beyond surface-level engagement to spark conversations that matter.</p>
                                         </div>
                                         <div class="">
                                             <a href="outreach-marketing-solution.html" class="th-arrow-btn">
@@ -92,7 +87,7 @@
                         <h6>02.</h6>
                     </div>
                     <div class="ous-right">
-                        <h2>FILM & PHOTOGRAPHY</h2>
+                        <h2>Film & Photography</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
@@ -101,15 +96,10 @@
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
-                                            <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
-                                                encompassing Influencer Marketing, Inter-Brand Collaborations, WhatsApp
-                                                & eMail Campaigns, Social Media Management, Evergreen Strategy
-                                                Development, and SEO. Amplify regional reach, shape online narratives,
-                                                and drive impactful results through our comprehensive suite of services
-                                                tailored for your success.</p>
+                                            <p> Capture the essence of your brand with our film and photography services. Whether it's stunning product photography or compelling corporate videos, we tell your brand's story through visually engaging content that resonates with your audience. </p>
                                         </div>
                                         <div class="">
-                                            <a href="#" class="th-arrow-btn">
+                                            <a href="film-n-photography.html" class="th-arrow-btn">
                                                 <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                                 <span class="btn-text">Learn More</span>
                                             </a>
@@ -125,7 +115,7 @@
                         <h6>03.</h6>
                     </div>
                     <div class="ous-right">
-                        <h2>Outreach</h2>
+                        <h2>Media Solutions</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
@@ -134,15 +124,10 @@
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
-                                            <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
-                                                encompassing Influencer Marketing, Inter-Brand Collaborations, WhatsApp
-                                                & eMail Campaigns, Social Media Management, Evergreen Strategy
-                                                Development, and SEO. Amplify regional reach, shape online narratives,
-                                                and drive impactful results through our comprehensive suite of services
-                                                tailored for your success.</p>
+                                            <p>Numbers are important, but our paid media solutions focus on more than just metrics. We tailor our strategies to your goals, whether it's driving eCommerce revenue or boosting brand awareness, delivering meaningful results that make an impact.</p>
                                         </div>
                                         <div class="">
-                                            <a href="#" class="th-arrow-btn">
+                                            <a href="media-solutions.html" class="th-arrow-btn">
                                                 <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                                 <span class="btn-text">Learn More</span>
                                             </a>
@@ -158,7 +143,7 @@
                         <h6>04.</h6>
                     </div>
                     <div class="ous-right">
-                        <h2>CREATIVE & BRANDING</h2>
+                        <h2>Creative & Branding</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
@@ -167,15 +152,10 @@
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
-                                            <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
-                                                encompassing Influencer Marketing, Inter-Brand Collaborations, WhatsApp
-                                                & eMail Campaigns, Social Media Management, Evergreen Strategy
-                                                Development, and SEO. Amplify regional reach, shape online narratives,
-                                                and drive impactful results through our comprehensive suite of services
-                                                tailored for your success.</p>
+                                            <p>Uncover the heart of your brand with our holistic branding solutions, where we dive into your identity to craft an unforgettable experience. From naming consultation to packaging development, we ensure every aspect resonates with your audience, forging meaningful connections that endure.</p>
                                         </div>
                                         <div class="">
-                                            <a href="#" class="th-arrow-btn">
+                                            <a href="creative-n-branding.html" class="th-arrow-btn">
                                                 <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                                 <span class="btn-text">Learn More</span>
                                             </a>
@@ -191,7 +171,7 @@
                         <h6>05.</h6>
                     </div>
                     <div class="ous-right">
-                        <h2>WEB & AR</h2>
+                        <h2>Website & AR</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
@@ -200,15 +180,10 @@
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
-                                            <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
-                                                encompassing Influencer Marketing, Inter-Brand Collaborations, WhatsApp
-                                                & eMail Campaigns, Social Media Management, Evergreen Strategy
-                                                Development, and SEO. Amplify regional reach, shape online narratives,
-                                                and drive impactful results through our comprehensive suite of services
-                                                tailored for your success.</p>
+                                            <p>Your online presence matters, and we make sure it shines with our website development services. Whether it's an eCommerce platform or an informational site, we design immersive digital experiences that captivate visitors from the first click to the last.</p>
                                         </div>
                                         <div class="">
-                                            <a href="#" class="th-arrow-btn">
+                                            <a href="website-n-ar.html" class="th-arrow-btn">
                                                 <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                                 <span class="btn-text">Learn More</span>
                                             </a>
@@ -224,7 +199,7 @@
                         <h6>06.</h6>
                     </div>
                     <div class="ous-right">
-                        <h2>OUTSIDE OF HOME</h2>
+                        <h2>Outside of Home</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
@@ -233,15 +208,10 @@
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
-                                            <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
-                                                encompassing Influencer Marketing, Inter-Brand Collaborations, WhatsApp
-                                                & eMail Campaigns, Social Media Management, Evergreen Strategy
-                                                Development, and SEO. Amplify regional reach, shape online narratives,
-                                                and drive impactful results through our comprehensive suite of services
-                                                tailored for your success.</p>
+                                            <p>Maximize your brand's visibility with our OOH (Outside of Home) advertising solutions. From eye-catching hoardings to strategically placed kiosks, we amplify your message in high-traffic areas, ensuring your brand stands out in the physical world.</p>
                                         </div>
                                         <div class="">
-                                            <a href="#" class="th-arrow-btn">
+                                            <a href="outside-of-home.html" class="th-arrow-btn">
                                                 <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                                 <span class="btn-text">Learn More</span>
                                             </a>
