--- a/swm-case-study.html
+++ b/swm-case-study.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MediaX | SWM Case Study</title>
+    <title>SWM Case Study | MediaX - Creative Growth Agency</title>
     <!-- Website Icon  -->
     <link rel="Icon" href="image/">
 
@@ -56,7 +56,6 @@
                             <p>Project </p>
                             <div class="tag-box">
                                 <div class="tag">Website</div>
-                                <div class="tag">SEO</div>
                                 <div class="tag">Branding</div>
                             </div>
                         </div>
