--- a/contact-us.html
+++ b/contact-us.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="contact[viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MediaX | Contact Us</title>
+    <title>Contact Us | MediaX - Creative Growth Agency</title>
     <!-- Website Icon  -->
     <link rel="Icon" href="image/">
 
